--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "rob535_competition"
 version = "0.1.0"
 authors = ["Acshi Haggenmiller <acshikh@umich.edu>"]
+links = "cplex"
+build = "build.rs"
 
 [dependencies]
 libc = "0.2.0"
@@ -10,3 +12,6 @@ lapack = "0.16.0"
 blas = "0.20.0"
 openblas-src = "0.6.1"
 time = "*"
+
+[build-dependencies]
+cc = "1.0"
