--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,10 @@ lapack = "0.16.0"
 blas = "0.20.0"
 #openblas-src = { version = "0.6.1", features = ["static", "system"] }
 time = "*"
+# potential_field = { version = "*", path = "lib-potential-field" }
+
+[workspace]
+members = ["lib-potential-field"]
 
 [lib]
 name="rob535_competition"
