removed unused stuff. 20 percent faster with fast inverse square root. needs to remove statclib crate type to run through main crate, oddly enough

--- a/lib-potential-field/Cargo.toml
+++ b/lib-potential-field/Cargo.toml
@@ -10,5 +10,4 @@ nalgebra = "0.16.0"
 [lib]
 name = "potential_field"
 path = "src/potential_field.rs"
-crate-type=["staticlib"]
-
+# crate-type=["staticlib"]
